--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
     "jest": "^29.7.0",
     "postcss": "^8",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
